# JobScout

./: .coderabbit.yaml  .coverage  .dockerignore  .env.example  .gitignore  .semgrepignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  LICENSE.md  LOCAL_AI_QUICKSTART.md  LOCAL_AI_TESTING.md  PREFERENCES_README.md  README.md  SONARQUBE_FIX_PLAN.md  SONARQUBE_SETUP.md  SuggestionsForPostgresSchema.md  TESTING.md  appendix-a-filtering-matching-design.md  atomic_job_requirements_units.md  config.yaml  dev instructions to prompt antigravity.txt  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.expose.yml  docker-compose.microservices.yml  docker-compose.override.yml  docker-compose.pipeline.yml  docker-compose.redis.yml  docker-compose.test.yml  docker-compose.web.yml  docker-compose.yml  main.py  package-lock.json  package.json  preferences.example.json  preferred-LLM-selection.md  pyproject.toml  (+5 more)
.github/: CODEOWNERS  dependabot.yml
core/: ai_service.py  app_context.py  auth.py  config_loader.py  ephemeral_quota.py  interfaces.py  jobspy_client.py  llm_evaluation.py  llm_evaluation_queue.py  llm_evaluation_worker.py  logging_utils.py  matcher_service.py  metrics.py  metrics_router.py  oci_critical_logging.py  policy.py  preference_semantics.py  public_concurrency.py  redis_streams.py  resume_evidence_selection.py  resume_selection.py  scorer_service.py  stream_consumer.py  utils.py
database/: bootstrap.py  context_signing.py  database.py  init_db.py  migrate.py  models.py  repository.py  schema_snapshot.json  schema_snapshot.py  uow.py
docs/: current_architecture_spec.md  refactor_baseline.md
etl/: canonical_summary.py  external_seed_fetcher.py  import_models.py  orchestrator.py  schema_models.py  schemas.py
gliner/: Dockerfile  main.py  pyproject.toml
job_scout_hub/: Dockerfile  config.yaml  main.py  pyproject.toml  test_etl_real_data.py
job_scout_hub/core/: config_loader.py
job_scout_hub/database/: database.py  init_db.py  models.py
job_scout_hub/etl/: etl.py  schemas.py
main_driver/: Dockerfile  database.py  etl.py  init_db.py  models.py  requirements.txt  test_etl_real_data.py
migrations/: 001_initial_schema.py  001_rename_extracted_at.py  002_add_is_hidden_to_job_match.py  002_user_notification_settings.py  003_add_user_files_table.py  003_notification_failure_class.py  004_allow_null_facet_embedding.py  004_candidate_preferences_fit_only.py  005_add_resume_processing_state.py  005_add_stage_status_fields.py  005_semantic_architecture_foundation.py  006_user_feature_capability.py  006_user_feature_entitlement.py  007_remove_facet_pipeline.py  008_ranking_schema_update.py  009_preference_components_split.py  010_rename_preferred_coverage_column.py  011_notification_ranking_alignment.py  012_match_selection_runs.py  013_job_post_source_tenant_scope.py  014_job_post_fingerprint_scope.py  015_two_tier_selection_and_evidence_score.py  016_notification_email_override_verification.py  README.md  fix_req_types.py  migrate_add_content_hash.py  migrate_add_notified.py  migrate_add_requirement_years.py  migrate_add_resume_section_embeddings.py  migrate_add_structured_resume.py  verify_changes.py
modal/: modal_server.py
notification/: README.md  __init__.py  channels.py  exceptions.py  message_builder.py  models.py  orchestrator.py  runtime_config.py  secrets.py  service.py  tracker.py  user_settings.py  worker.py
pipeline/: __init__.py  control.py  runner.py
scripts/: diagnose_pipeline.py  evaluate_fit_semantics.py  fix_shell_returns.py  fix_shell_syntax.py  generate_openai_schema.py  manage_feature_capability.py  manage_feature_entitlement.py  ollama-entrypoint.sh  run_tests.py  test_locking.py  test_pipeline_precedence.py  test_pipeline_status.py  trigger_scrape.py  validate_setup.sh
srs_tasks/: 00-index.md  01-platform-foundations.md  02-job-search-service-jobspy.md  03-job-inbox-tracker.md  04-matching-semantic-engine.md  05-tailoring-generation-diff-exports.md  06-quality-filters-service.md  07-dedup-clustering.md  08-notifications-digests-reminders.md  09-privacy-byok-local-retention.md  10-observability-ci-cd.md  11-linear-outstanding-remediation-spec.md  12-linear-remediation-implementation-plan.md  appendix-b-user-interface.md  manifest.json
tests/: README.md  __init__.py  conftest.py  conftest_docker.py  integration_test_etl_real_data.py  integration_test_full_pipeline.py  integration_test_matcher_real_embeddings.py  (+11 more)
(+577 files in other folders)
