[project]
name = "jobscout"
version = "0.1.0"
description = "Job scraping and analysis pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
    "pgvector>=0.4.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
    "redis>=5.0.0",
    "rq>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
