[project]
name = "jobscout"
version = "0.1.0"
description = "Job scraping and analysis pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.16.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tenacity>=8.5.0",
    "redis>=7.1.0",
    "rq>=1.15.0",
    "python-docx>=1.1.0",
    "pypdf>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "testcontainers>=4.10.0",
    "jsonschema>=4.26.0",
    "vulture>=2.14",
    "reportlab>=4.0.0",
]
web = [
    "fastapi>=0.128.1",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
]

[tool.uv]
default-groups = ["dev", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "integration_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
