[project]
name = "jobscout"
version = "0.1.0"
description = "Job scraping and analysis pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "openai>=2.16.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tenacity>=8.5.0",
    "redis>=7.1.0",
    "rq>=1.15.0",
    "lxml>=6.1.0",
    "python-docx>=1.1.0",
    "pypdf>=6.10.2",
    "xxhash>=3.5.0",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "testcontainers>=4.10.0",
    "jsonschema>=4.26.0",
    "vulture>=2.14",
    "reportlab>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
web = [
    "fastapi>=0.128.1",
    "uvicorn>=0.40.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "python-dotenv>=1.2.2",
]
fit-models = [
    # Cross-encoder triplet pinned to a known-good combination. FlagEmbedding
    # and sentence-transformers both pull in transformers; we pin it explicitly
    # so the reranker route does not silently degrade when a transitive bump
    # breaks FlagAutoReranker or CrossEncoder import paths.
    "FlagEmbedding==1.3.5",
    "sentence-transformers==5.4.1",
    "transformers==5.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core", "database", "etl", "notification",
    "services", "modal", "web"
]

[tool.uv]
default-groups = ["dev", "web"]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    ".venv/*",
    "scripts/*",
    "migrations/*",
    "*.egg-info/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "integration_test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli_level = "DEBUG"
log_level = "DEBUG"
filterwarnings = [
    "ignore::RuntimeWarning:asyncio",
    "ignore:coroutine 'AsyncMockMixin.*was never awaited",
    "ignore::DeprecationWarning:testcontainers",
]
